--- a/app/views/layouts/pdf/invoice.html.erb
+++ b/app/views/layouts/pdf/invoice.html.erb
@@ -26,9 +26,14 @@
     }
 
     .sdc-logo img {
-	  	max-width: 100px;
-	  	max-height: 80px;
+	  	max-width: 381px;
+	  	max-height: 40px;
   	}
+
+    h1 {
+      margin-top: 0px;
+      font-size: 28px;
+    }
 
   	p.indent {
 	  	margin-left: 4em;
@@ -37,10 +42,11 @@
   	footer .container {
   		padding: 0px;
 	  	border: 0px;
+      font-size: 12px;
   	}
 
   	footer img {
-	  	width: 12%;
+	  	width: 8%;
   	}
   </style>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
