--- a/app/assets/stylesheets/partials/_global.scss
+++ b/app/assets/stylesheets/partials/_global.scss
@@ -97,6 +97,14 @@ h1 {
 
 }
 
+.datepicker {
+	color: $black;
+}
+
+.bulk-expenses-row-header {
+	margin-bottom: 1rem;
+}
+
 .pad {
 	padding: 2em 0px;
 }
