--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -31,8 +31,11 @@
     <div class="col-sm-6">
 			<div class="form-group">
 				<%= f.label :cost %>
-				<%= f.number_field :cost, class: 'form-control', :step => '0.01' %>
-			</div>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-usd"></i></span>
+          <%= f.number_field :cost, class: 'form-control', :step => '0.01' %>
+        </div>
+      </div>
 			<div class="form-group">
 				<%= f.label :account %>
 				<%= select(:expense, 'account', expense_account_types, {}, { :class => 'form-control' }) %>
