--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -134,7 +134,8 @@
 				  			  data-name="Sefer Design Company LLC"
 				  			  data-description="<%= @invoice.display_id %>"
 				  			  data-image="https://s3.amazonaws.com/SeferBiz/internal/sdc-square.png"
-				  			  data-locale="auto">
+				  			  data-locale="auto",
+									data-bitcoin="true">
 				  			</script>
 				      <% end %>
 						</div>
