--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -11,7 +11,7 @@
 				<p><strong>Name:</strong> <%= @expense.name %></p>
 				<p><strong>Vendor:</strong> <%= link_to @expense.vendor do %><%= @expense.vendor.name %><% end %></p>
 				<p><strong>Date:</strong> <%= @expense.date %></p>
-				<p><strong>Cost:</strong> <%= number_to_currency(@expense.cost, { :negative_format => '(%n)' }) %></p>
+				<p><strong>Cost:</strong> <span class="currency"><%= number_to_currency(@expense.cost, { :negative_format => '(%n)' }) %></span></p>
 				<p><strong>Account:</strong> <%= @expense.account %></p>
 				<% if !@expense.notes.empty? %><p><strong>Notes:</strong> <%= @expense.notes %></p><% end %>
       </div>
