--- a/app/assets/stylesheets/partials/_global.scss
+++ b/app/assets/stylesheets/partials/_global.scss
@@ -141,7 +141,7 @@ ul {
 
 .currency {
 	letter-spacing: 1px;
-	font-family: monospace;
+	font-family: 'PT Mono', monospace;
 }
 
 p.lead.halfbottom {
