--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -10,6 +10,14 @@
 	</div>
 	<% end %>
 	<div class="row">
+		<div class="col-sm-12">
+			<div class="form-group">
+				<%= check_box(:client, :active, {}, 'true', 'false') %>
+				<%= f.label :active, 'Active?' %>
+				<%= check_box(:client, :international, {}, 'true', 'false') %>
+				<%= f.label :international, 'International?' %>
+			</div>
+		</div>
 		<div class="col-sm-4">
 			<div class="form-group">
 				<%= f.label :name %>
@@ -39,10 +47,6 @@
 				<%= f.label :currentrate, 'Current Hourly Rate' %>
 				<%= f.number_field :currentrate, class: 'form-control' %>
 			</div>
-			<div class="form-group">
-				<%= check_box(:client, :active, {}, 'true', 'false') %>
-				<%= f.label :active, 'Active?' %>
-			</div>
 		</div>
 		<div class="col-sm-4">
 			<div class="form-group">
@@ -65,16 +69,16 @@
 				<%= f.label :zipcode, 'Zipcode' %>
 				<%= f.text_field :zipcode, class: 'form-control' %>
 			</div>
-			<div class="form-group">
-				<%= check_box(:client, :international, {}, 'true', 'false') %>
-				<%= f.label :international, 'International?' %>
-			</div>
 			<% if @client.international %>
 			<div class="form-group">
 				<%= f.label :intinfo, 'International Info' %>
 				<%= f.text_field :intinfo, class: 'form-control' %>
 			</div>
 			<% end %>
+			<div class="form-group">
+				<%= f.label :federalein, 'Federal EIN' %>
+				<%= f.text_field :federalein, class: 'form-control' %>
+			</div>
 		</div>
 		<div class="col-sm-4">
 			<div class="form-group">
