--- a/app/views/years/_quarter.html.erb
+++ b/app/views/years/_quarter.html.erb
@@ -1,4 +1,4 @@
-<div class="col-lg-3 col-md-6">
+<div class="col-lg-6">
   <h3 class="text-center">Quarter <%= quarterNumber %></h3>
   <h4 class="text-center"><%= Date::MONTHNAMES[3 * quarterNumber - 2] %> - <%= Date::MONTHNAMES[3 * quarterNumber] %></h4>
   <p class="lead">Income: <span class="pull-right currency green"><%= number_to_currency(@year.incomeByQuarter(quarterNumber), { :negative_format => '(%n)' }) %></span></p>
