--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -58,7 +58,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-8">
+			<div class="col-sm-6">
 				<h3>Projects</h3>
 				<% if @client.projects.blank? %>
 				<p class="lead">No projects.</p>
@@ -83,70 +83,80 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-8">
+			<div class="col-sm-12">
 				<h3>Invoices</h3>
 				<% if @client.invoices.blank? %>
 				<p class="lead">No invoices.</p>
 				<% else %>
-				<h4>Paid By Year</h4>
-				<table class="table table-hover table-striped table-condensed">
-					<thead>
-						<tr>
-							<th>Year</th>
-							<th>&nbsp;</th>
-							<th class="text-right">Total Paid</th>
-						</tr>
-					</thead>
-					<tbody>
-						<% Year.order('year DESC').each do |year|
-							if Invoice.paidByYear(year.year).where(:client_id => @client.id).length > 0
-						%>
-						<tr>
-							<td><%= link_to year do %><%= year.year %><% end %></td>
-							<td>&nbsp;</td>
-							<td class="currency text-right"><%= number_to_currency(Invoice.paidByYear(year.year).where(:client_id => @client.id).sum(:cost), { :negative_format => '(%n)' }) %></td>
-						</tr>
-						<% end end %>
-					</tbody>
-					<tfoot>
-						<tr>
-							<td>&nbsp;</td>
-							<td class="text-right"><strong>Total</strong></td>
-							<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
-						</tr>
-					</tfoot>
-				</table>
-				<h4>All</h4>
-				<table class="table table-hover table-striped table-condensed">
-					<thead>
-						<tr>
-							<th>Date Sent</th>
-							<th>ID</th>
-							<th class="text-center hidden-xs">Type</th>
-							<th class="text-right">Cost</th>
-							<th class="text-center">Date Paid</th>
-						</tr>
-					</thead>
-					<tbody>
-						<% @client.invoices.each do |invoice| %>
-						<tr id="invoicerow<%= invoice.id %>">
-							<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
-							<td><%= invoice.display_id %></td>
-							<td class="text-center hidden-xs"><%= invoice.worktype %></td>
-							<td class="currency text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
-							<td class="text-center"><% if invoice.paid == true %><span class="green"><%= invoice.paiddate %></span><% else %><span class="spread red">Not Paid</span><% end %></td>
-						</tr>
-						<% end %>
-					</tbody>
-					<tfoot>
-						<tr>
-							<td colspan="2">&nbsp;</td>
-							<td class="text-center"><strong>Total</strong></td>
-							<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
-							<td>&nbsp;</td>
-						</tr>
-					</tfoot>
-				</table>
+				<div class="row">
+					<div class="col-sm-6">
+						<h4>Paid By Year</h4>
+						<table class="table table-hover table-striped table-condensed">
+							<thead>
+								<tr>
+									<th>Year</th>
+									<th>&nbsp;</th>
+									<th class="text-right">Total Paid</th>
+								</tr>
+							</thead>
+							<tbody>
+								<% Year.order('year DESC').each do |year|
+									if Invoice.paidByYear(year.year).where(:client_id => @client.id).length > 0
+								%>
+								<tr>
+									<td><%= link_to year do %><%= year.year %><% end %></td>
+									<td>&nbsp;</td>
+									<td class="currency text-right"><%= number_to_currency(Invoice.paidByYear(year.year).where(:client_id => @client.id).sum(:cost), { :negative_format => '(%n)' }) %></td>
+								</tr>
+								<% end end %>
+							</tbody>
+							<tfoot>
+								<tr>
+									<td>&nbsp;</td>
+									<td class="text-right"><strong>Total</strong></td>
+									<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
+								</tr>
+							</tfoot>
+						</table>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12">
+						<h4>All</h4>
+						<table class="table table-hover table-striped table-condensed">
+							<thead>
+								<tr>
+									<th>Date Sent</th>
+									<th>&nbsp;</th>
+									<th>ID</th>
+									<th class="text-center hidden-xs">Type</th>
+									<th class="text-right">Cost</th>
+									<th class="text-center">Date Paid</th>
+								</tr>
+							</thead>
+							<tbody>
+								<% @client.invoices.each do |invoice| %>
+								<tr id="invoicerow<%= invoice.id %>">
+									<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
+									<td><%= link_to new_invoice_path(:copied_id => invoice.id), :class => 'copy-invoice-link' do %><i class="fa fa-files-o"></i><% end %></td>
+									<td><%= invoice.display_id %></td>
+									<td class="text-center hidden-xs"><%= invoice.worktype %></td>
+									<td class="currency text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
+									<td class="text-center"><% if invoice.paid == true %><span class="green"><%= invoice.paiddate %></span><% else %><span class="spread red">Not Paid</span><% end %></td>
+								</tr>
+								<% end %>
+							</tbody>
+							<tfoot>
+								<tr>
+									<td colspan="3">&nbsp;</td>
+									<td class="text-center"><strong>Total</strong></td>
+									<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
+									<td>&nbsp;</td>
+								</tr>
+							</tfoot>
+						</table>
+					</div>
+				</div>
 				<% end %>
 			</div>
 		</div>
