--- a/app/assets/stylesheets/partials/_variables.scss
+++ b/app/assets/stylesheets/partials/_variables.scss
@@ -1,7 +1,7 @@
-$black: #000000;
-$white: #ffffff;
+$black: #000;
+$white: #fff;
 $white-off: #f6f6f6;
-$grey: #333333;
+$grey: #333;
 $green: #5cb85c;
 $red: #d9534f;
 $purple: #8a22ff;
