--- a/app/views/layouts/_financialdash.html.erb
+++ b/app/views/layouts/_financialdash.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-sm-12">
-		<p class="lead text-center">Total Receivable: <span class="currency red"><%= number_to_currency(total_invoiced_unpaid, { :negative_format => '(%n)' }) %></span></p>
+		<p class="lead text-center">Total Receivable: <span class="currency red"><%= number_to_currency(total_invoiced_unpaid, { :negative_format => '(%n)' }) %></span> <small>(<%= pluralize(Invoice.unpaid.count, 'invoice') %>)</small></p>
 	</div>
 </div>
 <div class="row">
