--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title><%= yield(:title) %><%= company_abbrv_name %> Biz Admin</title>
+  <title><%= yield(:title) %><%= company[:abbrv_name] %> Biz Admin</title>
   <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" />
   <%= csrf_meta_tags %>
-  <link rel="apple-touch-icon-precomposed" href="<%= company_favicon_url %>">
-  <link rel="shortcut icon" href="<%= company_favicon_url %>">
+  <link rel="apple-touch-icon-precomposed" href="<%= company[:logo][:favicon] %>">
+  <link rel="shortcut icon" href="<%= company[:logo][:favicon] %>">
   <%= stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' %>
   <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=PT+Mono' %>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
