--- a/app/views/layouts/pdf/invoice.html.erb
+++ b/app/views/layouts/pdf/invoice.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= company_abbrv_name %> Biz Admin</title>
+  <title><%= company[:abbrv_name] %> Biz Admin</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <%= wicked_pdf_stylesheet_link_tag "application", media: "all" %>
   <%= wicked_pdf_stylesheet_link_tag "font-awesome.min" %>
@@ -60,7 +60,7 @@
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<hr>
-				<p>&copy; <%= company_full_name %></p>
+				<p>&copy; <%= company[:full_name] %></p>
 				<%= wicked_pdf_image_tag '/images/sdc_acronym.svg' %>
 			</div>
 		</div>
