Description pre-fills

--- a/app/assets/stylesheets/partials/_global.scss
+++ b/app/assets/stylesheets/partials/_global.scss
@@ -162,6 +162,13 @@ section {
 	color: $green;
 }
 
+.description-prefills {
+
+	margin-bottom: 10px;
+	font-size: 13px;
+
+}
+
 #client-show,
 #project-show,
 #invoice-show {
