--- a/app/views/years/_quarter.html.erb
+++ b/app/views/years/_quarter.html.erb
@@ -2,6 +2,7 @@
   <h3 class="text-center">Quarter <%= quarterNumber %></h3>
   <h4 class="text-center"><%= Date::MONTHNAMES[3 * quarterNumber - 2] %> - <%= Date::MONTHNAMES[3 * quarterNumber] %></h4>
   <p class="lead">Income: <span class="pull-right currency green"><%= number_to_currency(@year.incomeByQuarter(quarterNumber), { :negative_format => '(%n)' }) %></span></p>
-  <p class="lead">Tax Estimate: <span class="pull-right currency red"><%= number_to_currency(@year.taxOwedByQuarter(quarterNumber), { :negative_format => '(%n)' }) %></span></p>
+  <p class="lead">Tax Est.: <span class="pull-right currency red"><%= number_to_currency(@year.taxOwedByQuarterActualCalendar(quarterNumber), { :negative_format => '(%n)' }) %></span></p>
+  <p class="lead">Payment Est.*: <span class="pull-right currency red"><%= number_to_currency(@year.taxOwedByQuarterTaxCalendar(quarterNumber), { :negative_format => '(%n)' }) %></span></p>
   <hr class="hidden-lg hidden-md">
 </div>
