--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -134,8 +134,7 @@
 				  			  data-name="Sefer Design Company LLC"
 				  			  data-description="<%= @invoice.display_id %>"
 				  			  data-image="https://s3.amazonaws.com/SeferBiz/internal/sdc-square.png"
-				  			  data-locale="auto",
-									data-bitcoin="true">
+				  			  data-locale="auto">
 				  			</script>
 				      <% end %>
 						</div>
